--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.7.1"
 pytest = "^6.2.2"
 tox = "^3.22.0"
 ipython = "^7.20.0"
+pylama = "^7.7.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
