--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,15 @@ exclude = ["**/*_test.py"]
 
 [tool.poetry.dependencies]
 python = "^3.7.1"
+sphinx-rtd-theme = "^0.5.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
 tox = "^3.22.0"
 ipython = "^7.20.0"
 pylama = "^7.7.1"
+Sphinx = "^3.5.1"
+sphinx-autobuild = "^2020.9.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
