move tests to its own directory
Initially, I wanted to put tests near the code, like that:

    src/registry.py
    src/registry_test.py

But, despite I like this way, it has several drawbacks:

  - It is not common in Python world
  - Tools like `poetry` don't expect it out of the box,
    and I have to tune them.
  - In addition to unit tests, I may need initegration tests,
    and there is no place to put them.

So, I decided to switch to the standard `tests/` directory,
with a bunch of `test_*.py` files inside.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "contextvars-extras"
 version = "0.1.0"
 description = "contextvars made easy"
 authors = ["Dmitry Vasilyanov <vdmit11@gmail.com>"]
-exclude = ["**/*_test.py"]
+exclude = []
 
 [tool.poetry.dependencies]
 python = "^3.7.1"
