--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ pylama = "^7.7.1"
 Sphinx = "^3.5.1"
 sphinx-autobuild = "^2020.9.1"
 rpdb = "^0.1.6"
+sphinx-toggleprompt = "^0.0.5"
+sphinx-copybutton = "^0.3.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
