--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,12 +13,12 @@ sphinx-rtd-theme = "^0.5.1"
 pytest = "^6.2.2"
 tox = "^3.22.0"
 ipython = "^7.20.0"
-pylama = "^7.7.1"
 Sphinx = "^3.5.1"
 sphinx-autobuild = "^2020.9.1"
 rpdb = "^0.1.6"
 sphinx-toggleprompt = "^0.0.5"
 sphinx-copybutton = "^0.3.1"
+pylava = "^0.3.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
