--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [pycodestyle]
 max-line-length = 100
 
-[pylama:pycodestyle]
+[pylava:pycodestyle]
 max_line_length = 100
 
-[pylama:pylint]
+[pylava:pylint]
 max_line_length = 100
