configure pylava to skip directories like `.tox`

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,9 @@
 [pycodestyle]
 max-line-length = 100
 
+[pylava]
+skip = .*,.*/*,**/.*  # all files and directories starting with a dot: .tox, .env, etc
+
 [pylava:pycodestyle]
 max_line_length = 100
 
