--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ rpdb = "^0.1.6"
 sphinx-toggleprompt = "^0.0.5"
 sphinx-copybutton = "^0.3.1"
 pylava = "^0.3.0"
+pylava-pylint = "^0.0.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
