add pylint to the list of linters executed by pylava

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,7 @@
 max-line-length = 100
 
 [pylava]
+linters = mccabe,pydocstyle,pycodestyle,pyflakes,pylint
 skip = .*,.*/*,**/.*  # all files and directories starting with a dot: .tox, .env, etc
 
 [pylava:pycodestyle]
