ignore .tox and other unwanted files when running tests/linters

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ max-line-length = 100
 [pylava]
 linters = mccabe,pydocstyle,pycodestyle,pyflakes,pylint
 skip = .*,.*/*,**/.*  # all files and directories starting with a dot: .tox, .env, etc
+paths = contextvars_extras tests
 
 [pylava:pycodestyle]
 max_line_length = 100
@@ -12,4 +13,6 @@ max_line_length = 100
 max_line_length = 100
 
 [tool:pytest]
-addopts = --doctest-modules --pylava
+addopts = --doctest-modules --pylava --ignore-glob='**/.*.py' --ignore-glob='.*.py' -W ignore::DeprecationWarning
+norecursedirs = .tox
+
