ignore various "missing docstring" linter warnings
Because right now things are changing rapidly,
and it is not practical to write verbose docstrings.

Hope to fix that later, when the code will become stable.

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,11 @@ linters = mccabe,pydocstyle,pycodestyle,pyflakes,pylint
 skip = .*,.*/*,**/.*  # all files and directories starting with a dot: .tox, .env, etc
 paths = contextvars_extras tests
 
+# Ignores are mostly "missing docstring" reports.
+# Because the project is now at a too early stage to spend a lot of effort for docstrings.
+# I hope to fix that later, when the code will stabilize.
+ignore=D100,D101,D103,D104,D105,D107,D203,D213,C0114,C0115,C0116
+
 [pylava:pycodestyle]
 max_line_length = 100
 
