--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 max-line-length = 100
 
 [pylava]
-linters = mccabe,pydocstyle,pycodestyle,pyflakes,pylint
+linters = mccabe,pydocstyle,pycodestyle,pylint
 skip = .*,.*/*,**/.*  # all files and directories starting with a dot: .tox, .env, etc
 paths = contextvars_extras tests
 
