switch linter: mccabe -> radon
radon is a more modern tool,
and supports McCabe complexity among other metrics,
so switching from `mccabe` to `radon`

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 max-line-length = 100
 
 [pylava]
-linters = mccabe,pydocstyle,pycodestyle,pylint
+linters = pydocstyle,pycodestyle,pylint,radon
 skip = .*,.*/*,**/.*  # all files and directories starting with a dot: .tox, .env, etc
 paths = contextvars_extras tests
 
