--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ sphinx-toggleprompt = "^0.0.5"
 sphinx-copybutton = "^0.3.1"
 pylava = "^0.3.0"
 pylava-pylint = "^0.0.3"
+radon = "^4.3.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
