--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ sphinx-copybutton = "^0.3.1"
 pylava = "^0.3.0"
 pylava-pylint = "^0.0.3"
 radon = "^4.3.2"
+mypy = "^0.812"
+pytest-mypy = "^0.8.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
