add `--mypy` option to `pylint`, also improve ignore patterns

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,8 +3,7 @@ max-line-length = 100
 
 [pylava]
 linters = pydocstyle,pycodestyle,pylint,radon
-skip = .*,.*/*,**/.*  # all files and directories starting with a dot: .tox, .env, etc
-paths = contextvars_extras tests
+skip = build,dist,docs,.*,.*/*,**/.*  # all files and directories starting with a dot: .tox, .env, etc
 
 # Ignores are mostly "missing docstring" reports.
 # Because the project is now at a too early stage to spend a lot of effort for docstrings.
@@ -18,6 +17,15 @@ max_line_length = 100
 max_line_length = 100
 
 [tool:pytest]
-addopts = --doctest-modules --pylava --ignore-glob='**/.*.py' --ignore-glob='.*.py' -W ignore::DeprecationWarning
-norecursedirs = .tox
+norecursedirs = build dist docs .tox
+addopts =
+    --doctest-modules
+    --pylava
+    --mypy
+    --ignore='./playground.py'
+    --ignore-glob='**/.*.py'
+    --ignore-glob='.*.py'
+    -W ignore::DeprecationWarning
+
+
 
