use `black` and `isort` for automatic code formatting

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,8 @@ addopts =
     --doctest-modules
     --pylava
     --mypy
+    --black
+    --isort
     --ignore='./playground.py'
     --ignore-glob='**/.*.py'
     --ignore-glob='.*.py'
