--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,19 @@ pylava-pylint = "^0.0.3"
 radon = "^4.3.2"
 mypy = "^0.812"
 pytest-mypy = "^0.8.0"
+black = "^20.8b1"
+isort = "^5.7.0"
+pytest-black = "^0.3.12"
+pytest-isort = "^1.3.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 100
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+line_length = 100
