add `pytest-isort` and `pytest-black` to tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,11 @@ isolated_build = True
 
 [testenv]
 deps =
-    pytest
-    pytest-mypy
     pylava
     pylava-pylint
+    pytest
+    pytest-black
+    pytest-isort
+    pytest-mypy
 commands =
     pytest
