--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,7 @@ max_line_length = 100
 [tool:pytest]
 norecursedirs = build dist docs .tox
 addopts =
+    --maxfail=2
     --doctest-modules
     --pylava
     --mypy
