tox: install packages via poetry, get rid of duplicate deps list

--- a/tox.ini
+++ b/tox.ini
@@ -4,11 +4,7 @@ isolated_build = True
 
 [testenv]
 deps =
-    pylava
-    pylava-pylint
-    pytest
-    pytest-black
-    pytest-isort
-    pytest-mypy
+    poetry
 commands =
+    poetry install --no-root
     pytest
