--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ black = "^20.8b1"
 isort = "^5.7.0"
 pytest-black = "^0.3.12"
 pytest-isort = "^1.3.0"
+Flask = "^1.1.2"
+gevent = "^21.8.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
