improve documentation structure, start working on README.rst
A ocuple of documentation improvements here:

 1. Start writing README.rst

 2. Re-structure API docs: put each module to its own .rst file
    This way each module converted to a separate small .html page,
    which is easier to naviage than one huge page containing all
    modules.

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -21,7 +21,7 @@ help:
 
 .PHONY: apidoc
 apidoc:
-	sphinx-apidoc --force -o . ../contextvars_extras
+	sphinx-apidoc --no-toc --separate --module-first --force -o . ../contextvars_extras
 
 .PHONY: browse
 browse: apidoc html
