pytest: run code examples from docs together with tests
pytest has some integration with the `doctest` module,
but by default, it doesn't scan `.rst`.

Here I'm changing that, so all doctest-style code examples from
the documentation are now automatically executed by pytest.

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ norecursedirs = build dist docs .tox
 addopts =
     --maxfail=2
     --doctest-modules
+    --doctest-glob='*.rst'
     --pylava
     --mypy
     --black
@@ -29,6 +30,3 @@ addopts =
     --ignore-glob='**/.*.py'
     --ignore-glob='.*.py'
     -W ignore::DeprecationWarning
-
-
-
