switch from `sphinx-apidoc` to `sphinx-autosummary`
`sphinx-autosummary` does the same (generates API docs),
but seem better to me because:

 - It renders a nice navigation table of classes/function in a module.

 - No need to manually execute a CLI command to generate `.rst` file)
   (so I even removed `apidoc` target from the `docs/Makefile`)

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -19,10 +19,6 @@ help:
 %: Makefile
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
-.PHONY: apidoc
-apidoc:
-	sphinx-apidoc --no-toc --separate --module-first --force -o . ../contextvars_extras
-
 .PHONY: browse
-browse: apidoc html
+browse: html
 	x-www-browser $(BUILDDIR)/html/index.html
