--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -4,20 +4,14 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python: ['3.7']
-
     steps:
       - uses: actions/checkout@v2
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
-          python-version: ${{ matrix.python }}
-      - name: Install tox and any other packages
+          python-version: 3.7
+      - name: Install tox
         run: pip install tox
       - name: Run tox
-        # Run tox using the version of Python in `PATH`
-        run: tox -e py
+        run: tox
