recurse into `docs/` directory when running `pytest`
Because .rst files contain code examples,
that should be executed by doctest/pytest.

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,7 @@ max_line_length = 100
 max_line_length = 100
 
 [tool:pytest]
-norecursedirs = build dist docs .tox
+norecursedirs = build dist .tox
 addopts =
     --maxfail=2
     --doctest-modules
