--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,9 @@ addopts =
     --mypy
     --black
     --isort
+    --cov=contextvars_extras
+    --cov-fail-under=95
+    --cov-report=term:skip-covered
     --ignore='./playground.py'
     --ignore-glob='**/.*.py'
     --ignore-glob='.*.py'
