--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.7.1"
+supply-args = "^0.0.3"
+
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
