--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,9 +30,9 @@ jobs:
         run: pip install poetry python-semantic-release
       - name: Release
         run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "action@github.com"
-          semantic-release publish -D commit_author="github-actions <action@github.com>"
+          git config --global user.name "Dmitry Vasilyanov"
+          git config --global user.email "vdmit11@gmail.com"
+          semantic-release publish -D commit_author=Dmitry Vasilyanov <vdmit11@github.com>"
         env:
           GH_TOKEN: ${{secrets.GITHUB_TOKEN}}
           PYPI_TOKEN: ${{secrets.PYPI_TOKEN}}
