build: configure coverage to ignore some special cases
That allows me to remove the useless test,
and also use `@typing.overload` without lowering test coverage.

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,3 +33,12 @@ addopts =
     --ignore-glob='**/.*.py'
     --ignore-glob='.*.py'
     -W ignore::DeprecationWarning
+
+[coverage:report]
+exclude_lines =
+    pragma: no cover
+    if 0:
+    raise AssertionError
+    raise NotImplementedError
+    @(abc\.)?abstractmethod
+    @overload
