--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,3 +97,20 @@ exclude_lines = [
     "@overload",
 ]
 
+[tool.mypy]
+python_version = 3.7
+show_error_codes = true
+# Enable some strict checks. It is almost like `mypy --strict`,
+# except for a couple of flags that take too much effort to fulfill.
+warn_unused_configs = true
+disallow_any_generics = true
+disallow_subclassing_any = true
+check_untyped_defs = true
+disallow_untyped_decorators = true
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_return_any = true
+warn_unreachable = true
+no_implicit_reexport = true
+strict_equality = true
