build: force python versions in tox
Because otherwise, tox will silently choose a closest Python version
available on the host system, which is definitely not what I want.

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,13 @@
 [tox]
 envlist = python{3.7, 3.10}
 isolated_build = True
+skip_missing_interpreters=false
+
+[testenv:python3.7]
+basepython = python3.7
+
+[testenv:python3.10]
+basepython = python3.10
 
 [testenv]
 deps =
