--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,16 +5,25 @@ on: [push]
 jobs:
   tests:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [ '3.7', '3.10' ]
+    name: run tests on Python v${{ matrix.python-version }}
     steps:
       - uses: actions/checkout@v2
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.7
-      - name: Install tox
-        run: pip install tox
-      - name: Run tox
-        run: tox
+          python-version: ${{ matrix.python-version }}
+      - name: Setup Poetry
+        uses: abatilo/actions-poetry@v2.1.3
+      - name: Install Python packages
+        run: |
+          poetry config experimental.new-installer false
+          poetry install --no-root
+      - name: Run tests
+        run: |
+          poetry run pytest
 
   release:
     needs: tests
