--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ pylava-pylint = "^0.0.3"
 radon = "^5.1.0"
 mypy = "^0.910"
 pytest-mypy = "^0.8.1"
-black = "^21.9b0"
+black = "^22.3.0"
 isort = "^5.9.3"
 pytest-black = "^0.3.12"
 pytest-isort = "^2.0.0"
