feat: remove "under development" warnings, the code is stable enough

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ documentation = "https://contextvars-extras.readthedocs.io"
 keywords = ["contextvars", "context", "async", "threading", "gevent"]
 exclude = []
 classifiers = [
-  "Development Status :: 2 - Pre-Alpha",
+  "Development Status :: 4 - Beta",
   "Intended Audience :: Developers",
   "License :: OSI Approved :: MIT License",
   "Programming Language :: Python",
