--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,13 +18,15 @@ classifiers = [
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",  
   "Topic :: Software Development :: Libraries",
   "Topic :: Software Development :: Libraries :: Python Modules",
 ]
 
 
 [tool.poetry.dependencies]
-python = "^3.7.1"
+python = "^3.8.10"
 sentinel-value = "^1.0.0"
 
 
