chore: migrate to newer semantic-release config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,7 @@ build-backend = "poetry.core.masonry.api"
 line-length = 100
 
 [tool.semantic_release]
-version_toml = "pyproject.toml:tool.poetry.version"
+version_toml = ["pyproject.toml:tool.poetry.version"]
 upload_to_pypi = true
 upload_to_release = true
 build_command = "poetry build"
