--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
           poetry run ruff check $SRC_DIRS
       - name: mypy
         run: |
-          poetry run mypy SRC_DIRS
+          poetry run mypy $SRC_DIRS
       - name: pytest
         run: |
           poetry run pytest -vv --cov=contextvars_registry --cov-fail-under=100 $SRC_DIRS
