--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,9 @@ cython_debug/
 
 # Flycheck (Emacs) temporary files
 .flycheck__*
+
+# DoIt DB and other temporary files
+/.doit.*
+
+# my personal scratchpad
+/playground.py
